[package]
name = "udp-over-http"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = { version = "1.2" }
clap = { features = ["derive"], version = "4.0" }
hyper = { features = ["full"], version = "0.14" }
hyper-rustls = { features = ["http2"], version = "0.23" }
rustls = { features = ["dangerous_configuration"], version = "0.20" }
thiserror = { version = "1.0" }
tokio = { features = ["full"], version = "1.21" }
